--- a/feedback.html
+++ b/feedback.html
@@ -189,11 +189,10 @@
 
       <!-- Feedback Form -->
       <form id="internalForm" action="https://formsubmit.co/admin@dustbusterscleaners.com" method="POST" class="space-y-5">
-        <input type="hidden" name="_subject" value="New Feedback from DustBusters Customer">
+        <input type="hidden" name="_subject" value="⭐ New Customer Feedback - DustBusters Cleaners">
         <input type="hidden" id="rating-for-email" name="star_rating" value="">
         <input type="hidden" name="_next" id="next-url" value="">
         <input type="hidden" name="_captcha" value="false">
-        <input type="hidden" name="_template" value="table">
         <input type="text" name="_honey" style="display:none" tabindex="-1" autocomplete="off">
 
         <!-- Name Fields -->
